--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DecryptActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"
+            ></activity>
+        <activity android:name=".EncryptActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
