--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,10 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
-
+        <activity android:name=".AesED"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
