--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.procleaus.tea">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,20 +23,23 @@
         <activity
             android:name=".DecryptActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
-            ></activity>
-        <activity android:name=".EncryptActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".EncryptActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
-        <activity android:name=".SencryptActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".SencryptActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
-        <activity android:name=".AesED"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".AesED"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".ApiActivity"
+            android:label="@string/title_activity_api"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
